--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </div>
 
     <footer> 🎲 Dicee Game 🎲 </footer>
-    <script src="dicee.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
